--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Weather Forecast</title>
-    <base href="/">
+    <title>Weather Forecastuygubbhbbhg</title>
+    <base href="/random12311_op/">
     <style type="text/css">
     app-root:empty::after {
       content: url('http://www.skillstack.com/assets/images/loader-icon-spacer.gif');
